crates/rolldown/tests/rolldown/errors/ambiguous_reexport/main.js
export * from './file.js'
export * from './file2.js'

console.log()
